--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue-admin-template</title>
+    <script src="//at.alicdn.com/t/font_661437_58k8inv4s7vqjjor.js"></script>
+    <style type="text/css">
+    .icon {
+       width: 1em; height: 1em;
+       vertical-align: -0.15em;
+       fill: currentColor;
+       overflow: hidden;
+    }
+</style>
   </head>
   <body>
     <div id="app"></div>
